--- a/index.html
+++ b/index.html
@@ -224,78 +224,15 @@
         </section>
         <!--projetos-->
         <section>
-            <div class="container pb-3 mt-5 mb-5">
-                <div class="row mb-4">
-                    <div class="col text-center">
-                        <h1 class="title-brown display-4">Projetos Ativos</h1>
+            <div class="container">
+                <div class="row align-items-center flex-column flex-sm-row">
+                    <div class="col-4 mt-5 col-projetos text-center pb-0">
+                        <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="">
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div id="carouselProjetos" class="carousel slide">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <div class="d-flex gap-4 justify-content-center">
-                                        <div class="card card-projetos border-0 rounded-4 align-items-center"
-                                            style="width: 15rem;">
-                                            <img src="./img/projetos.png"
-                                                class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
-                                            <div class="card-body">
-                                                <h3 class="card-title text-center title-card-projetos">Nome Projeto
-                                                </h3>
-                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição
-                                                    Breve descrição Breve descrição</p>
-                                            </div>
-                                        </div>
-                                        <div class="card card-projetos border-0 rounded-4 align-items-center"
-                                            style="width: 15rem;">
-                                            <img src="./img/projetos.png"
-                                                class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
-                                            <div class="card-body">
-                                                <h3 class="card-title title-card-projetos text-center">Nome Projeto
-                                                </h3>
-                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição
-                                                    Breve descrição Breve descrição</p>
-                                            </div>
-                                        </div>
-                                        <div class="card card-projetos border-0 rounded-4 align-items-center"
-                                            style="width: 15rem;">
-                                            <img src="./img/projetos.png"
-                                                class="card-img-top p-2 pb-0 w-75 rounded-circle" alt="...">
-                                            <div class="card-body">
-                                                <h3 class="card-title text-center title-card-projetos">Nome Projeto
-                                                </h3>
-                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição
-                                                    Breve descrição Breve descrição</p>
-                                            </div>
-                                        </div>
-                                        <div class="card card-projetos border-0 rounded-4 align-items-center"
-                                            style="width: 15rem;">
-                                            <img src="./img/projetos.png"
-                                                class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
-                                            <div class="card-body">
-                                                <h3 class="card-title text-center title-card-projetos">Nome Projeto
-                                                </h3>
-                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição
-                                                    Breve descrição Breve descrição</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselProjetos"
-                                data-bs-slide="prev" disabled>
-                                <span class="carousel-control-prev-icon me-5" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselprojetos"
-                                data-bs-slide="next" disabled>
-                                <span class="carousel-control-next-icon ms-5" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
+                    <div class="col-6 col-projetos mb-4 mb-md-0">
+                        <h2 class="h-projetos display-3">Projetos</h2>
+                        <p class="p-projetos">Nosso Grupo conta com diversos projetos acontecendo simultaneamente sempre alinhados com a nossa missão, visão e valores.</p>
+                        <p class="p-projetos">Alguns de nossos projetos:  listar aqui 1, listar aqui 2, listar aqui 3.</p>
                     </div>
                 </div>
             </div>
