--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
         <section class="bg-white" id="quem-somos">
             <div class="container">
                 <div class="row align-items-center about">
-                    <div class="col-4 mt-5 mb-0 mb-lg-5">
+                    <div class="col-4 mt-5 mb-0 mb-lg-5 quem-somos text-center">
                         <img src="./img/cacto.png" alt="cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
-                    <div class="col-8 mt-5 mb-5">
+                    <div class="col-8 mt-0 mt-md-5 mb-0 mb-md-5 quem-somos p-5 pt-4">
                         <h1 class="title-green display-3">Quem Somos</h1>
                         <p class="p-quem text-black">
                             O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade
