--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo Viver Mais</title>
-    <meta name="description" content="ONG Grupo de Idosos Viver Mais: Fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.">
+    <meta name="description"
+        content="ONG Grupo de Idosos Viver Mais: Fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.">
     <link rel="shortcut icon" href="./img/logo/logo.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -25,7 +26,7 @@
             </a>
             <button class="navbar-toggler rounded-circle fs-1 p-2" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+                aria-label="Abrir aba de navegação">
                 <span><i class="bi bi-list fs-1 text-white"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -41,12 +42,15 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">Transparência</a>
+                        <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">
+                            Transparência
+                        </a>
                     </li>
                 </ul>
                 <div class="ms-lg-5 pb-3 pb-lg-0">
                     <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#apoia"
-                        role="button">Apoie o Grupo
+                        role="button">
+                        Apoie o Grupo
                     </a>
                 </div>
             </div>
@@ -60,7 +64,9 @@
                     <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia e longevidade!</p>
                     <p class="p-home fs-5">Faça parte dessa história.</p>
                     <a class="btn btn-lg rounded-5 px-4 pt-3 pb-3 button border-0 text-white" href="#apoia"
-                        role="button">Apoie o Grupo</a>
+                        role="button">
+                        Apoie o Grupo
+                    </a>
                 </div>
                 <div class="col pt-0 mt-lg-5 pe-0 me-0 m-0 mb-md-0 d-flex justify-content-end">
                     <img class="img-fluid" src="./img/banner.png" alt="Mulher idosa sorrindo">
@@ -85,7 +91,9 @@
                             de vulnerabilidade pessoal e social.
                         </p>
                         <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" role="button"
-                            data-bs-toggle="modal" data-bs-target="#quemSomosModal">Saiba Mais</a>
+                            data-bs-toggle="modal" data-bs-target="#quemSomosModal">
+                            Saiba Mais
+                        </a>
                     </div>
                 </div>
             </div>
@@ -165,51 +173,64 @@
                         <p class="p-atividades fs-5">Arrasta para o lado!</p>
                     </div>
                     <!--carrossel grande e extra grande-->
-                    <div id="carouselAutoplaying" class="carousel slide col-7 p-0 d-none d-md-block d-lg-block d-xl-block" data-bs-ride="carousel">
+                    <div id="carouselAutoplaying"
+                        class="carousel slide col-7 p-0 d-none d-md-block d-lg-block d-xl-block"
+                        data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./img/carrossel/roda-de-conversas.png" class="d-block w-100" alt="Roda de Conversas">
+                                <img src="./img/carrossel/roda-de-conversas.png" class="d-block w-100"
+                                    alt="Roda de Conversas">
                             </div>
                             <div class="carousel-item">
                                 <img src="./img/carrossel/fisioterapia.png" class="d-block w-100" alt="Fisioterapia">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/carrossel/sessoes-de-filme.png" class="d-block w-100" alt="Sessões de Filmes">
+                                <img src="./img/carrossel/sessoes-de-filme.png" class="d-block w-100"
+                                    alt="Sessões de Filmes">
                             </div>
                             <div class="carousel-item">
                                 <img src="./img/carrossel/jogos.png" class="d-block w-100" alt="Jogos">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
                     <!--carrossel pequena e média-->
-                    <div id="carouselMobileAutoplaying" class="carousel slide carrossel col-7 p-0 d-block d-md-none d-lg-none d-xl-none" data-bs-ride="carousel">
+                    <div id="carouselMobileAutoplaying"
+                        class="carousel slide carrossel col-7 p-0 d-block d-md-none d-lg-none d-xl-none"
+                        data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./img/carrossel/mobile/roda-de-conversas.png" class="d-block w-100" alt="Roda de Conversas">
+                                <img src="./img/carrossel/mobile/roda-de-conversas.png" class="d-block w-100"
+                                    alt="Roda de Conversas">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/carrossel/mobile/fisioterapia.png" class="d-block w-100" alt="Fisioterapia">
+                                <img src="./img/carrossel/mobile/fisioterapia.png" class="d-block w-100"
+                                    alt="Fisioterapia">
                             </div>
                             <div class="carousel-item">
-                                <img src="./img/carrossel/mobile/sessoes-de-filmes.png" class="d-block w-100" alt="Sessões de Filmes">
+                                <img src="./img/carrossel/mobile/sessoes-de-filmes.png" class="d-block w-100"
+                                    alt="Sessões de Filmes">
                             </div>
                             <div class="carousel-item">
                                 <img src="./img/carrossel/mobile/jogos.png" class="d-block w-100" alt="Jogos">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselMobileAutoplaying" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselMobileAutoplaying"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselMobileAutoplaying" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselMobileAutoplaying"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
@@ -254,11 +275,11 @@
                     <img src="img/qr-code.png" alt="QR Code do Pix" style="width: 120px;">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia display-5 mb-0 text-black">Pix - QR Code</h2>
-                        <p class="p-apoia text-black">
-                            Banco de tal <br>
-                            CNPJ - 11.111/0001-11 <br>
-                            Nome da Instituição como aparece no Banco
-                        </p>
+                        <div class="p-apoia text-black">
+                            <p style="margin: 0;">Banco de tal</p>
+                            <p style="margin: 0;">CNPJ - 11.111/0001-11</p>
+                            <p style="margin: 0;">Nome da Instituição como aparece no Banco</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-1 d-inline text-end d-none d-md-inline m-0 p-0">
@@ -273,7 +294,8 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-1" id="quemSomosModalLabel">Quem Somos</h2>
-                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal"
+                        aria-label="Fechar"></button>
                 </div>
                 <div class="modal-body">
                     Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o
@@ -297,7 +319,8 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-1" id="estatutoModalLabel">Estatuto</h2>
-                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal"
+                        aria-label="Fechar"></button>
                 </div>
                 <div class="modal-body">
                     Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
@@ -314,12 +337,14 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="transparenciaModal" tabindex="-1" aria-labelledby="transparenciaModalLabel" aria-hidden="true">
+    <div class="modal fade" id="transparenciaModal" tabindex="-1" aria-labelledby="transparenciaModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-1" id="transparenciaModalLabel">Transparência</h2>
-                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal"
+                        aria-label="Fechar"></button>
                 </div>
                 <div class="modal-body">
                     Lorem ipsum dolor sit amet consectetur. Viverra est vitae nunc in enim massa lectus massa
@@ -341,7 +366,8 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-1" id="missaoModalLabel">Missão</h2>
-                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal"
+                        aria-label="Fechar" title="Fechar"></button>
                 </div>
                 <div class="modal-body">
                     Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando
@@ -351,13 +377,13 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="visaoModal" tabindex="-1" aria-labelledby="visaoModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="visaoModal" tabindex="-1" aria-labelledby="visaoModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-1" id="visaoModalLabel">Visão</h2>
-                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal"
+                        aria-label="Fechar" title="Fechar"></button>
                 </div>
                 <div class="modal-body">
                     Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na
@@ -372,11 +398,15 @@
             <div class="modal-content rounded-4">
                 <div class="modal-header">
                     <h2 class="modal-title fs-1" id="valoresModalLabel">Valores</h2>
-                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close focus-ring focus-ring-light" data-bs-dismiss="modal"
+                        aria-label="Fechar" title="Fechar"></button>
                 </div>
                 <div class="modal-body">
-                    Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade;
-                    Atendimento Humanizado; Respeito<br> à Diversidade; Transparência; Responsabilidade Social.
+                    Respeito; Ética;<br>
+                    Cuidado; Excelência;<br>
+                    Felicidade Pessoal;<br>
+                    Criatividade; Atendimento Humanizado; Respeito<br>
+                    à Diversidade; Transparência; Responsabilidade Social.
                 </div>
             </div>
         </div>
@@ -395,9 +425,12 @@
                     </div>
                     <div class="col-12 col-md rodape-links pt-4">
                         <h3 class="rodape-text">Links</h3>
-                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#quemSomosModal">Quem Somos</a>
-                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#estatutoModal">Estatuto</a>
-                        <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal" data-bs-target="#transparenciaModal">Transparência</a>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal"
+                            data-bs-target="#quemSomosModal">Quem Somos</a>
+                        <a class="rodape-a d-block pb-3 text-decoration-none" role="button" data-bs-toggle="modal"
+                            data-bs-target="#estatutoModal">Estatuto</a>
+                        <a class="rodape-a d-block text-decoration-none" role="button" data-bs-toggle="modal"
+                            data-bs-target="#transparenciaModal">Transparência</a>
                     </div>
                     <div class="col-12 col-md pt-4">
                         <h3 class="rodape-text">Contatos</h3>
@@ -432,7 +465,9 @@
                 <a href="https://www.instagram.com/gruposimios/" target="_blank" title="Instagram">
                     <img src="./img/social/instagram-cinza.png" alt="Icone do Instagram">
                 </a>
-                <a class="ms-3 rodape__links-simios" href="./grupo-simios.html">Todos os direitos reservados para Grupo Símios</a>
+                <a class="ms-3 rodape__links-simios" href="./grupo-simios.html">
+                    Todos os direitos reservados para Grupo Símios
+                </a>
             </div>
         </div>
     </footer>
